force-app/main/default/objects/Action_Item__c/fields/Action_Item_Note__c.field-meta.xml
<CustomField>
    <fullName>Action_Item_Note__c</fullName>
    <label>Action Item Note</label>
    <type>TextArea</type>
</CustomField>