force-app/main/default/objects/Action_Item__c/fields/Client_Goal__c.field-meta.xml
<CustomField>
    <fullName>Client_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Goal</label>
    <referenceTo>Client_Goal__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>