force-app/main/default/objects/Action_Item__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <formula>Client_Goal__r.Goal_Name__c</formula>
    <label>Goal</label>
    <type>Text</type>
</CustomField>