force-app/main/default/objects/Action_Item__c/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <formula>&quot;1st:&quot;+ Client_Goal__r.X1st_Objective__c + BR() +
&quot;2nd:&quot;+ Client_Goal__r.X2nd_Objective__c + BR() +
&quot;3rd:&quot;+ Client_Goal__r.X3rd_Objective__c</formula>
    <label>Objectives</label>
    <type>Text</type>
</CustomField>